# unordered-pair

./: .mailmap  .travis.yml  Cargo.toml  changelog.md  license-apache.txt  license-mit.txt  readme.md
.github/workflows/: rust.yml
src/: lib.rs
