[package]
name = "unordered-pair"
description = "A tuple struct representing an unordered pair"
version = "0.2.2"
authors = [
    "Jeremy Stucki <jeremy@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
]
license = "MIT/Apache-2.0"
readme = "readme.md"
repository = "https://github.com/myelin-ai/unordered-pair"
homepage = "https://github.com/myelin-ai/unordered-pair"
documentation = "https://docs.rs/unordered-pair"
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
